# projects

futcurves/: .gitignore  README.md  pyproject.toml
futcurves/examples/: databento_quickstart.py  sofr_strip_pca_demo.py
futcurves/notebooks/: debug_databento.ipynb  explore_futcurves.ipynb
futcurves/src/futcurves/: __init__.py
futcurves/src/futcurves/core/: __init__.py  curve.py  portfolio.py  roll.py  schema.py  universe.py
futcurves/src/futcurves/sources/: __init__.py  csv_source.py  databento_source.py
futcurves/tests/: test_parent_fetch.py  test_roll_weights.py  test_strip_curve_holdings.py  test_universe.py
